[update]修改package.json中的name
将名称修改为自己的，以方便使用

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kadira/storybook-ui",
+  "name": "@qiangege/storybook-ui",
   "version": "3.6.2",
   "description": "Core Storybook UI",
   "repository": {
