build:将依赖的search组件添加到package中

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
   },
   "dependencies": {
     "@kadira/react-split-pane": "^1.4.0",
+    "@beisen/Search":"^0.1.34",
     "babel-runtime": "^6.5.0",
     "deep-equal": "^1.0.1",
     "events": "^1.1.1",
